data/all_generated_tests/raw_wast_tests/br_if_ImproperFunctionCallorReturnHandling_1819.wast
;; 10. **Test Description:** Implement a `br_if` directly followed by a `call` instruction, triggering a function indirectly. The conditionally skipped function must confirm proper function was called or not.    - **Constraint:** Ensures conditionally skipping `call` with `br_if` is handled accurately.    - **Improper Handling:** Misalignment between the branch being taken and the subsequent call instruction execution.

(assert_invalid
 (module
  (type $t (func))
  (import "" "f" (func $f (type $t)))
  (func $type-cond-call
   (block
    (i32.const 1)
    (br_if 0 (i32.const 1))
    (call $f)
   )
  )
 )
 "type mismatch"
)